# fluidsim

./: .appveyor.yml  .gitattributes  .gitlab-ci.yml  .hgignore  .hgtags  .mdformat.toml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  HOWTO.txt  MANIFEST.in  Makefile  README.md  README.rst  bitbucket-pipelines.yml  config.py  environment.yml  meson.build  meson.options  noxfile.py  pixi.toml  postBuild  pylintrc  pyproject.toml  setup.cfg  setup.py  setup_build.py  setup_config.py  setup_configure.py  site.cfg.default  tmp_bug_unearth.py  tox.ini  try_pyproject.toml
fluidsim/: __init__.py  _version.py  _version.tpl  magic.py  meson.build  test.py
fluidsim/base/: __init__.py  init_fields.py  meson.build  params.py  setofvariables.py  state.py
fluidsim/base/basilisk/: __init__.py  operators.py  run_example.py  solver.py  state.py  time_stepping.py
fluidsim/base/basilisk/output/: __init__.py
fluidsim/base/dedalus/: operators.py  solver.py  state.py  time_stepping.py
fluidsim/base/dedalus/output/: __init__.py
fluidsim/base/forcing/: __init__.py  anisotropic.py  base.py  kolmogorov.py  meson.build  milestone.py  specific.py  test_kolmogorov.py
fluidsim/base/output/: __init__.py  base.py  cross_corr3d.py  horiz_means.py  increments.py  kolmo_law3d.py  meson.build  model.xmf  movies.py  phys_fields.py  phys_fields1d.py  phys_fields2d.py  phys_fields3d.py  print_stdout.py  prob_dens_func.py  probes.py  profiles_spatial_means.py  spatial_means.py  spatiotemporal_spectra.py  spect_energy_budget.py  spectra.py  spectra3d.py  spectra_multidim.py  temporal_spectra.py  time_signalsK.py  time_signals_fft.py  util_pythran.py  z_profiles_spatial_means.py
fluidsim/base/preprocess/: __init__.py  base.py  meson.build  pseudo_spect.py  test.py
fluidsim/base/solvers/: __init__.py  base.py  finite_diff.py  info_base.py  meson.build  pseudo_spect.py
fluidsim/base/sphericalharmo/: __init__.py  meson.build  output.py  phys_fields.py  solver.py  state.py
fluidsim/base/test/: meson.build  test_base_solver.py  test_base_solver_ps.py  test_params.py
fluidsim/base/time_stepping/: __init__.py  base.py  finite_diff.py  meson.build  pseudo_spect.py  pseudo_spect_cy.pyx  rk_pythran.py  simple.py
fluidsim/base/time_stepping/_pythran/: _pseudo_spect.cpp  _pseudo_spect.py  _pythran_pseudo_spect.cpp  _pythran_pseudo_spect.py
fluidsim/base/turb_model/: __init__.py  base.py  meson.build  smagorinsky.py  specific.py  stress_tensor.py  test_turb_model.py
fluidsim/extend_simul/: __init__.py  kolmogorov.py  meson.build  spatial_means_center_milestone.py  spatial_means_regions_milestone.py  test_kolmogorov.py
fluidsim/operators/: __init__.py  _bench_util2d.py  base.py  compile_bench_pythran.sh  functions2d_pythran.py  meson.build  op_finitediff.py  op_finitediff1d.py  op_finitediff2d.py  operators0d.py  operators1d.py  operators2d.py  operators3d.py  operators_plate2d.py  setofvariables.py  sphericalharmo.py  util2d_pythran.py  util3d_pythran.py  util_sw1l_pythran.py
fluidsim/operators/CySources/: miscellaneous_cy.pyx  operators_cy.pyx  setofvariables_cy.pyx  setofvariables_cy_old.pyx
fluidsim/operators/fft/: __init__.py  easypyfft.py  profile_fft.ods
fluidsim/operators/test/: meson.build  old_test_operators_cy.py  test_operators.py  test_operators2d.py  test_operators3d.py  test_operators_cy.py
fluidsim/solvers/: __init__.py  meson.build
fluidsim/solvers/ad1d/: __init__.py  init_fields.py  meson.build  solver.py  state.py  test_solver.py
fluidsim/solvers/burgers1d/: __init__.py  meson.build  solver.py  test_solver.py
fluidsim/solvers/models0d/: __init__.py  meson.build  test_lorenz.py  test_predaprey.py
fluidsim/solvers/nl1d/: __init__.py  meson.build  solver.py  test_solver.py
fluidsim/solvers/ns2d/: __init__.py  forcing.py  init_fields.py  meson.build  solver.py  solver_fluidfft.py  solver_oper_cython.py  state.py  test_solver.py  test_with_uxuy.py  util_pythran.py  with_uxuy.py
fluidsim/solvers/ns3d/: __init__.py  forcing.py  init_fields.py  meson.build  milestone.py  solver.py  state.py  test_solver.py  test_solver_ns3d.py  time_stepping.py  try_load.py  try_save.py
fluidsim/solvers/plate2d/: __init__.py  dimensional.py  forcing.py  init_fields.py  meson.build  operators.py  solver.py  state.py  test_dimensional.py  test_solver.py  util_oper_pythran.py
fluidsim/solvers/sphere/: __init__.py  meson.build
fluidsim/solvers/sw1l/: __init__.py  forcing.py  forcing_old.py  init_fields.py  meson.build  operators.py  solver.py  state.py  test_operators.py  test_solver.py  test_solver_sw1l.py  time_stepping.py  util_oper_pythran.py  util_pythran.py
fluidsim/solvers/test/: test_ns.py  test_solvers.py  test_sw1l.py
fluidsim/solvers/waves2d/: __init__.py  meson.build  solver.py  state.py  test_solver.py
fluidsim/util/: __init__.py  frequency_modulation.py  meson.build  mini_oper_modif_resol.py  output.py  test_util.py  testing.py  util.py
fluidsim/util/console/: __init__.py  __main__.py  bench.py  bench_analysis.py  meson.build  profile.py  test_bench.py  test_profile.py  util.py
fluidsim/util/scripts/: __init__.py  ipy_load.py  meson.build  modif_resolution.py  restart.py  test_ipy_load.py  test_modif_resolution.py  test_restart.py  test_turb_trandom_anisotropic.py  turb_rotation_trandom_anisotropic.py  turb_stratification_trandom_anisotropic.py  turb_trandom_anisotropic.py  turb_trandom_anisotropic_postproc.py
lib/: README.md  README.rst  pyproject.toml  setup.cfg
lib/fluidsim_core/: __init__.py  _version.py  extend_simul.py  hexa_field.py  hexa_files.py  info.py  ipy_load.py  loader.py  magic.py  movies.py  output.py  params.py  paths.py  solver.py
lib/fluidsim_core/output/: __init__.py  base.py  dataframe_from_paths.py  movies.py  phys_fields.py  phys_fields_snek5000.py  remaining_clock_time.py
lib/fluidsim_core/scripts/: __init__.py  restart.py
lib/fluidsim_core/tests/: conftest.py  solver.py  test_hexa_files.py  test_loader.py  test_output_movies.py  test_solver.py  test_solver_with_output.py
(+1244 files in other folders)
