option(
    'transonic-backend',
    type: 'string',
    value: 'pythran,python,numba',
    description:
      'pythran,python,numba (default), cython, numpy, numba; ' +
      'or comma separated value representing multi-backends'
)
option('use-xsimd', type: 'boolean', value: true, description: 'Use xsimd')
option(
    'pythran-complex-hook',
    type : 'combo',
    choices : ['os-dependent', 'true', 'false'],
    value : 'os-dependent',
    description: 'Pythran complex_hook option'
)
