[metadata]
name = fluidsim
description = Framework for studying fluid dynamics with simulations.
keywords = Fluid dynamics, research
license = CeCILL License

[options]
python_requires = >= 3.6

[options.extras_require]

doc =
    sphinx
    sphinx_rtd_theme
    numpydoc
    jupyter
    pandas
    scipy

fft =
    pyfftw >= 0.10.4
    fluidfft >= 0.2.7

sphere = fluidsht >= 0.0.3a0

mpi = mpi4py

test =
    pytest
    pytest-cov
    ipython

dev =
    %(doc)s
    %(test)s
    %(mpi)s
    %(fft)s
    %(sphere)s

full =
    %(dev)s

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source = ./fluidsim
data_file = .coverage/coverage
omit =
    */test*.py
    */try_*.py
    */_old_*.py

[coverage:report]
show_missing = True
exclude_lines =
    if __name__ == .__main__.:
    if "sphinx" in sys.modules:
    raise ValueError
    raise NotImplementedError
    except KeyError:
    except ImportError:
    except AttributeError:
    except NotImplementedError:

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml

# [tool:pytest]
# addopts = --cov=fluidsim --cov-report html --cov-config=setup.cfg
