[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'fluidsim-core'
version = "0.8.0rc1"
description = "Pure-Python core library for FluidSim framework"
requires-python = ">=3.9"
authors = [
    {name = "pierre.augier", email = "pierre.augier@univ-grenoble-alpes.fr"},
]
dependencies = [
     "fluiddyn",
     "importlib_metadata; python_version < '3.10'",
]

[project.entry-points."fluidsim_core.tests"]
test = "fluidsim_core.tests.solver"
