[metadata]
name = fluidsim-core
version = attr: fluidsim_core.__version__
author = FluidDyn project
author_email = fluiddyn@freelists.org
keywords = Fluid dynamics, research, CFD, fluiddyn, fluidsim
description = Pure-Python core library for FluidSim framework
long_description = file: README.rst
long_description_content_type = text/x-rst
license = CeCILL License
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: CeCILL License
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
project-urls =
    Bug Tracker = https://foss.heptapod.net/fluiddyn/fluidsim/-/issues
    Documentation = https://fluidsim.readthedocs.io


[options]
python_requires = >= 3.6
packages = find:
install_requires =
    fluiddyn >= 0.3.2
