[metadata]
name = fluidsim-core
version = attr: fluidsim_core.__version__
author = FluidDyn project
author_email = fluiddyn@freelists.org
keywords = Fluid dynamics, research, CFD, fluiddyn, fluidsim
description = Pure-Python core library for FluidSim framework
long_description = file: README.rst
long_description_content_type = text/x-rst
license = CeCILL License
license_file = LICENSE.txt
url = https://foss.heptapod.net/fluiddyn/fluidsim/-/tree/branch/default/lib
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    # actually CeCILL License (GPL compatible license for French laws)
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
project-urls =
    Bug Tracker = https://foss.heptapod.net/fluiddyn/fluidsim/-/issues
    Documentation = https://fluidsim.readthedocs.io/en/latest/generated/fluidsim_core.html


[options]
python_requires = >= 3.6
packages = find:
install_requires =
    fluiddyn >= 0.3.2
    importlib_metadata >= 3.6.0 ; python_version < "3.10"

[options.entry_points]
fluidsim_core.tests =
    test = fluidsim_core.tests.solver
