python_sources = [
  '__init__.py',
  'init_fields.py',
  'solver.py',
  'state.py',
  'test_solver.py',
  'time_stepping.py',
  'try_load.py',
  'try_save.py',
]

py.install_sources(
  python_sources,
  subdir: 'fluidsim/solvers/ns3d',
)

subdir('bouss')
subdir('forcing')
subdir('output')
subdir('strat')
