python_sources = [
  '__init__.py',
  'restart.py',
  'test_turb_trandom_anisotropic.py',
  'ipy_load.py',
  'test_ipy_load.py',
  'turb_trandom_anisotropic.py',
  'test_modif_resolution.py',
  'modif_resolution.py',
  'test_restart.py',
]

py.install_sources(
  python_sources,
  subdir: 'fluidsim/util/scripts'
)
