python_sources = [
  '__init__.py',
  '_old_miguel_frequency_spectra.py',
  '_old_miguel_spatio_temporal_spectra.py',
  'phys_fields.py',
  'print_stdout.py',
  'spatial_means.py',
  'spect_energy_budget.py',
  'spectra_multidim.py',
  'spectra.py',
]

py.install_sources(
  python_sources,
  subdir: 'fluidsim/solvers/ns2d/strat/output',
)
